Add configuration API draft
