# openapi.yaml
@@ -43,98 +43,90 @@ tags:
     externalDocs:
       url: https://github.com/eliona-smart-building-assistant/device-simulator-app
 
-  - name: Customization
-    description: Help to customize Eliona environment
-    externalDocs:
-      url: https://github.com/eliona-smart-building-assistant/device-simulator-app
-
 paths:
-  /configs:
+  /generators:
     get:
       tags:
         - Configuration
-      summary: Get configurations
-      description: Gets information about all configurations.
-      operationId: getConfigurations
+      summary: List all generators
       responses:
         "200":
-          description: Successfully returned all configurations
+          description: A list of generators
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/Configuration"
+                  $ref: "#/components/schemas/Generator"
     post:
       tags:
         - Configuration
-      summary: Creates a configuration
-      description: Creates a configuration.
-      operationId: postConfiguration
+      summary: Create a new generator
       requestBody:
+        required: true
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/Configuration"
+              $ref: "#/components/schemas/Generator"
       responses:
         "201":
-          description: Successfully created a configuration
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Configuration"
-
-  /configs/{config-id}:
+          description: Generator created
+  /generators/{id}:
     get:
       tags:
         - Configuration
-      summary: Get configuration
-      description: Gets information about the configuration with the given id
+      summary: Get a generator by ID
       parameters:
-        - $ref: "#/components/parameters/config-id"
-      operationId: getConfigurationById
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
       responses:
         "200":
-          description: Successfully returned configuration
+          description: A single generator
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Configuration"
-        "400":
-          description: Bad request
+                $ref: "#/components/schemas/Generator"
+        "404":
+          description: Generator not found
     put:
       tags:
         - Configuration
-      summary: Updates a configuration
-      description: Updates a configuration
+      summary: Update a generator by ID
       parameters:
-        - $ref: "#/components/parameters/config-id"
-      operationId: putConfigurationById
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
       requestBody:
+        required: true
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/Configuration"
+              $ref: "#/components/schemas/Generator"
       responses:
         "200":
-          description: Successfully updated a configuration
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Configuration"
+          description: Generator updated
+        "404":
+          description: Generator not found
     delete:
       tags:
         - Configuration
-      summary: Deletes a configuration
-      description: Removes information about the configuration with the given id
+      summary: Delete a generator by ID
       parameters:
-        - $ref: "#/components/parameters/config-id"
-      operationId: deleteConfigurationById
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
       responses:
         "204":
-          description: Successfully deleted configured configuration
-        "400":
-          description: Bad request
+          description: Generator deleted
+        "404":
+          description: Generator not found
 
   /version:
     get:
@@ -166,41 +158,6 @@ paths:
               schema:
                 type: object
 
-  /dashboard-templates/{dashboard-template-name}:
-    get:
-      tags:
-        - Customization
-      summary: Get a full dashboard template
-      description: Delivers a dashboard template which can assigned to users in Eliona
-      externalDocs:
-        description: The API to assign the dashboard to users in Eliona (see post /dashboards endpoint).
-        url: https://github.com/eliona-smart-building-assistant/eliona-api
-      operationId: getDashboardTemplateByName
-      parameters:
-        - name: dashboard-template-name
-          in: path
-          description: Name of the dashboard template
-          required: true
-          schema:
-            type: string
-            example: Template
-        - name: projectId
-          in: query
-          description: Define the project the dashboard should be
-          required: true
-          schema:
-            type: string
-            example: 99
-      responses:
-        "200":
-          description: Successfully returned dashboard template
-          content:
-            application/json:
-              schema:
-                $ref: "https://raw.githubusercontent.com/eliona-smart-building-assistant/eliona-api/main/openapi.yaml#/components/schemas/Dashboard"
-        "404":
-          description: Template name not found
-
 components:
   parameters:
     config-id:
@@ -215,81 +172,38 @@ components:
         example: 4711
 
   schemas:
-    Configuration:
+    Generator:
       type: object
-      description: Each configuration defines access to provider's API.
       properties:
         id:
           type: integer
-          format: int64
-          description: Internal identifier for the configured API (created automatically).
           readOnly: true
-          nullable: true
-        apiAccessChangeMe:
-          type: string
-          format: string
-          description: There should be things like API address, access keys and so on.
-          example: 10.10.10.101
-        enable:
-          type: boolean
-          description: Flag to enable or disable fetching from this API
-          default: true
-          nullable: true
-        refreshInterval:
+        asset_id:
           type: integer
-          description: Interval in seconds for collecting data from API
-          default: 60
-        requestTimeout:
+        attribute:
+          type: string
+        function_type:
+          type: string
+          enum:
+            - boolean
+            - sin_wave
+            - sawtooth_wave
+        min_value:
+          type: number
+          format: double
+        max_value:
+          type: number
+          format: double
+        interval_seconds:
           type: integer
-          description: Timeout in seconds
-          default: 120
-          nullable: true
-        assetFilter:
-          $ref: "#/components/schemas/AssetFilter"
-          nullable: true
-          example:
-            [
-              [{ "parameter": "deviceName", "regex": "Main.*" }, { "parameter": "deviceType", "regex": "110" }],
-              [{ "parameter": "macAddress", "regex": "(70:82:0e:12:28:cc|70:56:06:12:.*)" }],
-              [{ "parameter": "ipAddress", "regex": "192\\.168\\..*" }],
-            ]
-        active:
-          type: boolean
-          readOnly: true
-          description: Set to `true` by the app when running and to `false` when app is stopped
-          nullable: true
-        projectIDs:
-          type: array
-          description: List of Eliona project ids for which this device should collect data. For each project id all smart devices are automatically created as an asset in Eliona. The mapping between Eliona is stored as an asset mapping in the KentixONE app.
-          nullable: true
-          items:
-            type: string
-          example:
-            - "42"
-            - "99"
-        userId:
-          type: string
-          readOnly: true
-          description: ID of the last Eliona user who created or updated the configuration
-          nullable: true
-          example: "90"
-
-    AssetFilter:
-      type: array
-      description: Array of rules combined by logical OR
-      items:
-        type: array
-        description: Array of rules combined by logical AND
-        items:
-          $ref: "#/components/schemas/FilterRule"
-
-    FilterRule:
-      type: object
-      description: Asset selection rule. Possible parameters are defined in app's README file.
-      properties:
-        parameter:
-          type: string
-          example: "name"
-        regex:
-          type: string
-          example: "^first_floor_.*$"
+        frequency:
+          type: number
+          format: double
+      required:
+        - asset_id
+        - attribute
+        - function_type
+        - min_value
+        - max_value
+        - interval_seconds
+        - frequency
